--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
     "commit": "git cz"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "eslint-plugin-unused-imports": "^4.0.0",
+    "framer-motion": "^11.2.13",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "react": "^18",
