--- a/package.json
+++ b/package.json
@@ -14,17 +14,24 @@
   "dependencies": {
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.16.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@supabase/ssr": "^0.4.0",
+    "@supabase/supabase-js": "^2.44.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "emoji-mart": "^5.6.0",
     "eslint-plugin-unused-imports": "^4.0.0",
     "framer-motion": "^11.2.13",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
+    "prisma": "^5.16.2",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
