--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "prisma": {
+    "schema": "./prisma/schema.prisma"
   }
 }
